# s3-file-uploader

./: .gitignore  CMakeLists.txt  README.md  build.yml  main.cpp
.github/workflows/: build.yml
examples/: CMakeLists.txt  main.cpp
scripts/: build.sh  deploy.sh  init.sh
scripts/cmake/: aarch_toolchain.cmake  arm_toolchain.cmake  aws-sdk-cpp.cmake  cpack.cmake  curl.cmake  openssl.cmake  project.spec.in  rapidjson.cmake  x86_toolchain.cmake  zlib.cmake
scripts/templates/: gdk-config.json.template  recipe.json.template
src/: CMakeLists.txt  key_exchange.cc  key_exchange.h  main.cpp  s3_client.cc  s3_client.h
